--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.475.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.1",
